# AIfromscratch

./: OptionalLabAndrewNg.ipynb  README.md  pyproject.toml
src/DecisionTree/: ModelFromScratch.ipynb  Readme.md
src/LinearRegression/: scratch.ipynb
src/LogisticRegression/: ModelFromScratch.ipynb  Readme.md
