[tool.poetry]
name = "scratch"
version = "0.1.0"
description = ""
authors = ["abdoulayediall <abdoulaye.diallo@vanillahr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
imblearn = "^0.0"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
